# vibin

./: .gitignore  README.md  README_DEV.md  pyproject.toml  setup.py
media/: vibin_architecture.drawio  vibin_overview.drawio
vibin/: __init__.py  base.py  constants.py  device_resolution.py  exceptions.py  logger.py  models.py  test.py  types.py  utils.py
vibin/amplifiers/: __init__.py  amplifier.py  hegel.py  streammagic.py
vibin/cli/: __init__.py  cli.py
vibin/external_services/: __init__.py  discogs.py  external_service.py  genius.py  rateyourmusic.py  wikipedia.py
vibin/managers/: __init__.py  favorites_manager.py  links_manager.py  lyrics_manager.py  playlists_manager.py  shared.py  stored_playlists_manager.py  waveform_manager.py
vibin/mediaservers/: __init__.py  asset.py  cxnv2.py  cxnv2usb.py  mediaserver.py
vibin/mediasources/: __init__.py  asset.py  mediasource.py
vibin/models/: models.py
vibin/server/: __init__.py  dependencies.py  server.py
vibin/server/routers/: __init__.py  active_playlist.py  albums.py  artists.py  browse.py  favorites.py  media_server_proxy.py  playlist.py  playlists.py  presets.py  queue.py  stored_playlists.py  system.py  tracks.py  transport.py  ui_static.py  upnp_events.py  vibin.py  websocket_server.py  websocket_server_router.py
vibin/streamers/: __init__.py  cxnv2.py  streamer.py  streammagic.py
vibin/upnp/: __init__.py  device.py  discovery.py  exceptions.py  factory.py
