[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["media"]

[project]
name = "vibin"
version = "2.0.0"
description = "The Vibin music server"
authors = [
    { name = "Mike Joblin", email = "mjoblin@users.noreply.github.com" },
]
license = { file = "COPYING" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "aiofiles >= 23.1.0, < 24",
    "aiohttp >= 3.9.0",
    "asgiref >= 3.7.0",
    "async-upnp-client >= 0.40.0",
    "click >= 8.1.3, < 9",
    "deepdiff >= 6.3.0, < 7",
    "discogs_client >= 2.3.0, < 3",
    "fastapi >= 0.97.0, < 0.98",
    "httpcore >= 1.0.8",  # 1.0.8 fixes Python 3.14 compatibility; remove this once httpx is updated to include httpcore with Python 3.14 fix
    "httpx >= 0.27.0",  # 0.27+ required for httpcore 1.x
    "lxml >= 4.9.2",
    "lyricsgenius >= 3.0.1, < 3.6.4",  # 3.6.4+ requires Python 3.11
    "packaging >= 24.1",
    "requests >= 2.31.0, < 3",
    "rich >= 13.4.2, < 14",
    "starlette >= 0.27.0, < 0.28",
    "tinydb >= 4.8.0, < 5",
    "untangle >= 1.2.1, < 2",
    "uvicorn[standard] >= 0.22.0, < 0.23",
    "websockets >= 11.0.3, < 12",
    "wikipedia >= 1.4.0, < 2",
    "xmltodict >= 0.13.0, < 0.14",
]

[project.optional-dependencies]
dev = [
    "black[d]",
    "coverage",
    "pytest",
]

[project.scripts]
vibin = "vibin.cli:cli"

[project.urls]
"Homepage" = "https://github.com/mjoblin/vibin"
